# hpp-affordance-corba

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
data/: package.xml
data/meshes/: box.stl
data/urdf/: box.urdf
doc/: Doxyfile.extra.in
idl/hpp/corbaserver/affordance/: affordance.idl  common.idl
include/hpp/corbaserver/affordance/: CMakeLists.txt  doc.hh.in  fwd.hh  server.hh
src/: CMakeLists.txt  affordance.impl.cc  affordance.impl.hh  hpp-affordance-corba.cc  server.cc
src/hpp/corbaserver/affordance/: __init__.py  affordance.py  client.py  corba.py  robot.py
tests/: test-affordance-config.py  test-oriented-box.py
